[gd_scene load_steps=6 format=2]

[ext_resource path="res://TabScreens/GalaxyMap/GalaxyMapControls/FloatingTable.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.372549 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0.54902, 1, 0.784314 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="FloatingTable" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
visible_columns = [ "timestamp", "event", "" ]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 1008.0
margin_bottom = 584.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/Panel/VBoxContainer"]
margin_right = 1008.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 0
custom_fonts/font = SubResource( 3 )
text = "something something"
align = 1
valign = 1
uppercase = true

[node name="DetailsMargin" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 44.0
margin_right = 1008.0
margin_bottom = 584.0
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="Table" type="Tree" parent="MarginContainer/Panel/VBoxContainer/DetailsMargin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 996.0
margin_bottom = 528.0
size_flags_vertical = 3
columns = 3
hide_folding = true
hide_root = true
select_mode = 1

[connection signal="gui_input" from="MarginContainer/Panel/VBoxContainer/Title" to="." method="_on_Title_gui_input"]
[connection signal="item_selected" from="MarginContainer/Panel/VBoxContainer/DetailsMargin/Table" to="." method="_on_Table_item_selected"]
